--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,54 @@
   <p class="font-serif text-4xl text-white">This font uses serif</p> 
   <p class="font-mono text-4xl text-white">This font uses mono</p>
   <p class="text-lg text-white">The quick brown fox ...</p> 
-  <p class="text-xl ... text-white">The quick brown fox ...</p>
+  <p class="text-xl ... text-red-500">The quick brown fox ...</p>
   <p class="text-2xl ... text-white">The quick brown fox ...</p>
   <p class="text-3xl ... text-white">The quick brown fox ...</p>
   <div class=" bg-red-300 h-8 text-white"></div>
   <div class="h-8 bg-red-500 text-white"></div>
   
   <button class="text-white bg-red-400 p-2 m-5 border-2 border-red-600 rounded-2xl hover:text-gray-300 hover:bg-red-800">Click Me</button>
+  <h1 class="text-3xl text-green-500 bg-red-400 font-serif ">Tailwind is working!</h1>
+
+
+  <div class=" container  mx-auto mt-10 border border-red-500 rounded-lg ">
+     <h1 class="text-white pt-2 pl-4 text-xl">I'm centered horizontally!</h1>
+    <p class="text-white p-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text</p>
+    <div class="flex justify-center">
+      <button class="text-white bg-red-400 p-2 m-5 border-2 border-red-600 rounded-2xl hover:text-gray-300 hover:bg-red-800">Click Me</button>
+    </div>
+  </div>
+
+  <div class="w-1/2 h-32 p-10 m-4 border-2 border-blue-500 rounded-lg bg-blue-100 text-center">
+    Hello Tailwind Box 📦
+  </div>
+
+
+  <div class="flex flex-row justify-center gap-4 p-4 bg-gray-100">
+    <div class="w-1/3 p-4 bg-blue-300 text-white text-center rounded-lg">Box 1</div>
+    <div class="w-1/3 p-4 bg-green-300 text-white text-center rounded-lg">Box 2</div>
+    <div class="w-1/3 p-4 bg-pink-300 text-white text-center rounded-lg">Box 3</div>
+  </div>
+  
+  <div class="p-10 bg-gray-200">
+    <div class=" relative top-16 left-0 p-4 bg-blue-500 text-white">
+      I moved 1rem down and 1.5rem right from my normal place.
+    </div>
+  </div>
+
+  <div class="relative w-64 h-64 bg-gray-200 mt-10 ml-10 rounded-md">
+    <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-pink-500 text-white px-4 py-2 rounded-lg">
+      Perfectly Centered!
+    </div>
+  </div>
+
+  <div class="flex flex-row justify-between p-4 bg-gray-100">
+    <div class="w-32 h-32 bg-blue-500 text-white flex items-center justify-center">Box 1</div>
+    <div class="w-32 h-32 bg-green-500 text-white flex items-center justify-center">Box 2</div>
+    <div class="w-32 h-32 bg-red-500 text-white flex items-center justify-center">Box 3</div>
+  </div>
+
+
+// top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2
 </body>
 </html>
